# GarticClone

./: .gitignore  CMakeGraphVizOptions.cmake  CMakeLists.txt  Doxyfile  README.md  build.sh  build_debug.sh  build_noui.sh  build_release.sh  package-lock.json  setup.sh  todo.txt  todo2.txt  what to do.txt
src/: CMakeLists.txt  bind.cc  debugging.h  html_const.cpp.in  main.cpp  network_const.h
src/ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters
src/ConsoleApplication1/x64/Debug/: ConsoleApplication1.exe.recipe  ConsoleApplication1.ilk  ConsoleApplication1.vcxproj.FileListAbsolute.txt  vc143.idb
src/ConsoleApplication1/x64/Debug/ConsoleA.1f448c95.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ConsoleApplication1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/Final_ver2/: CMakeLists.txt  data.db  databaseheader.h  lobby.cpp  lobby.h  lobby.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  signup.cpp  signup.h  signup.ui
src/client/: CMakeLists.txt  base_udp_client.cpp  client_handler.cpp  client_handler.hpp  client_init.cpp  client_init.hpp  main.cpp
src/client/client/: client_handler.cpp  client_handler.hpp  client_init.cpp  client_init.hpp
src/client/states/: client_handler.cpp  client_handler.hpp  state_authentication.cpp  state_ingame.cpp  state_leaderboard.cpp  state_room.cpp
src/database/: CMakeLists.txt  accounts.txt  data.db  main.cpp  textdatabase.cpp  textdatabase.hpp  word_list.cpp  word_list.hpp
src/in_out/: CMakeLists.txt  exposed_input.cpp  exposed_input.hpp  js_output.cpp  js_output.hpp  test_input.hpp
src/independent/: CMakeLists.txt
src/independent/aheaderonly/: CMakeLists.txt
src/independent/aheaderonly/types/types/: playeraccount.hpp
src/independent/aheaderonly/utils/utils/: rng.cpp  rng.hpp  safe_queue.hpp
src/independent/database/: CMakeLists.txt
src/independent/database/database/: accounts.txt  accounts_format.txt  textdatabase.cpp  textdatabase.hpp  word.txt  word_list.cpp  word_list.hpp
src/independent/msg/: CMakeLists.txt
src/independent/msg/msg/: msg_format.hpp  msg_sendrecv.cpp  msg_sendrecv.h
src/independent/msg/msg/type/: msg_base.cpp  msg_base.hpp  msg_factory.cpp  msg_serialize.cpp  msg_serialize.hpp
src/independent/printdebug/: CMakeLists.txt
src/independent/printdebug/printdebug/: debugging.cpp  debugging.h
src/independent/sockaddr_in/: CMakeLists.txt
src/independent/sockaddr_in/sockaddr_in/: sockaddr_in_functions.cpp  sockaddr_in_functions.hpp
src/independent/sqldatabase/: CMakeLists.txt  DatabaseForPlayers.cpp  FuncForWord.cpp  funcForAcc.cpp  strongPassword.cpp
src/js_io/: CMakeLists.txt
src/js_io/js_io/: exposed_input.cpp  exposed_input.hpp  js_output.cpp  test_input.cpp  test_input.hpp
src/msg/: CMakeLists.txt  msg_format.cpp  msg_format.hpp  msg_sendrecv.cpp  msg_sendrecv.h  msg_serialize.cpp  msg_serialize.h
src/msg/types/: msg_connect.cpp  msg_connect.hpp  msg_ingame.cpp  msg_ingame.hpp  msg_transition.hpp
src/server/: CMakeLists.txt  authorization.cpp  authorization.hpp  game_format.h  main.cpp  room_handler.cpp  room_handler.hpp  server_destroy.cpp  server_handle.h  server_handler.cpp  server_handler.hpp  server_ingame.cpp  server_init.cpp  server_init.hpp  server_leaderboard.cpp  server_lobby.cpp  server_lobby.hpp  server_room.cpp  word_list.cpp  word_list.hpp
src/server/server/: room_handler.cpp  room_handler.hpp  server_init.cpp  server_init.hpp  server_lobby.cpp  server_lobby.hpp
src/server/states/: room_handler.cpp  room_handler.hpp  safe_queue.hpp  state_ingame.cpp  state_leaderboard.cpp  state_room.cpp
src/sockaddr_in/: CMakeLists.txt  sockaddr_in_functions.cpp
src/states/: CMakeLists.txt  READ_notes_on_include.txt  msg_factory.cpp  open_all_msg.ps1  test_input.cpp
src/states/auth/: CMakeLists.txt
src/states/auth/auth/: client_auth.cpp  server_auth.cpp  server_auth.hpp
src/states/auth/auth/msg/: msg_auth.cpp  msg_auth.hpp
src/states/auth/test/: CMakeLists.txt  client.cpp  server.cpp
src/states/ingame/: CMakeLists.txt  client_ingame.cpp  msg_ingame.cpp  msg_ingame.hpp  msg_next_end.cpp  msg_next_end.hpp  room_ingame.cpp
src/states/ingame/ingame/: client_ingame.cpp  room_ingame.cpp
src/states/ingame/ingame/msg/: msg_ingame.cpp  msg_ingame.hpp  msg_next_end.cpp  msg_next_end.hpp
src/states/leaderboard/: CMakeLists.txt  client_leaderboard.cpp  msg_leaderboard.cpp  msg_leaderboard.hpp  room_leaderboard.cpp
src/states/leaderboard/leaderboard/: client_leaderboard.cpp  room_leaderboard.cpp
src/states/leaderboard/leaderboard/msg/: msg_leaderboard.hpp
src/states/lobby/: CMakeLists.txt  client_lobby.cpp  msg_lobby.cpp  msg_lobby.hpp
src/states/lobby/lobby/: client_lobby.cpp
src/states/lobby/lobby/msg/: msg_lobby.cpp  msg_lobby.hpp
src/states/lobby/test/: CMakeLists.txt  client.cpp  server.cpp
src/states/new/: CMakeLists.txt  client_auth.cpp  client_auth.hpp  msg_auth.cpp  msg_auth.hpp  server_auth.cpp  server_auth.hpp
src/states/new/test/: CMakeLists.txt  client.cpp  server.cpp
src/states/room/: CMakeLists.txt  client_room.cpp  msg_connection.hpp  msg_start.cpp  msg_start.hpp  room_room.cpp
src/states/room/room/: client_connection.hpp  client_room.cpp  room_connection.hpp  room_room.cpp
src/states/room/room/msg/: msg_connection.cpp  msg_connection.hpp  msg_start.cpp  msg_start.hpp
src/temp_unimportant/: client_msg.cpp  cmd.sh  main.cpp  main.qml  server_msg.cpp
src/temp_unimportant/lib/: Counter.svelte
src/test/: CMakeLists.txt  cmd_client.cpp  main_client.cpp  main_server.cpp  server.test.txt
src/test/txt/: client.test.txt  client2.test.txt  input.test.txt  input2.test.txt  server.test.txt
src/test/txt/auth/: client.test.txt  input.test.txt  server.test.txt
src/test2/: CMakeLists.txt  test  testcurrenttime.cpp  testtimer.cpp
src/timer/: CMakeLists.txt  TimerThread.cpp  TimerThread.hpp
src/timer/timer/: test.cpp  timer_thread.cpp  timer_thread.hpp
src/word/: CMakeLists.txt  main.cpp  wordlist.txt
(+1191 files in other folders)
